# HashingExperiments

./: CMakeLists.txt  README.md
examples/: exp-hypercube.sh  exp-keys.sh
src/: CMakeLists.txt  hashfunctions.h  main.cpp
src/tools/: debug.h  papi.h  timer.h
